fix(app layout): fix mobile layout issues, font (#1610)

--- a/astro_2.0/components/DaosList/DaosList.module.scss
+++ b/astro_2.0/components/DaosList/DaosList.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/mixins';
+@import 'styles/typography';
 
 .root {
   display: grid;
@@ -21,6 +22,7 @@
   }
 
   .title {
+    @extend %heading1;
     margin: 0 0 20px;
 
     @include tablet-portrait {
