--- a/astro_3.0/features/CfcLibraryNext/CfcLibraryNext.module.scss
+++ b/astro_3.0/features/CfcLibraryNext/CfcLibraryNext.module.scss
@@ -15,6 +15,7 @@
   }
 
   h1 {
+    @extend %heading1;
     margin: 16px 0;
   }
 
